--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -33,4 +33,4 @@ jobs:
     - name: Configure Alibaba Cloud OSSUTIL
       run: ./ossutil64 config -i ${ACCESS_KEY} -k ${ACCESS_KEY_SECRET} -e ${OSS_ENDPOINT} -c .ossutilconfig
     - name: Upload the web folder to the chosen OSS bucket
-      run: ./ossutil64 --config-file .ossutilconfig cp ${{ github.workspace }}/web oss://${OSS_BUCKET_NAME} -r -f
+      run: ./ossutil64 --config-file .ossutilconfig cp ${{ github.workspace }}/build oss://${OSS_BUCKET_NAME} -r -f
